Fixed bug 45811: Fix XMLSec 1.4.2 problems reported by findbugs
git-svn-id: https://svn.apache.org/repos/asf/xml/security/trunk@695520 13f79535-47bb-0310-9956-ffa450edef68